day8part1 solution